ci: fix package-name in release-please action

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           release-type: rust
           bump-minor-pre-major: true
-          package-name: release-please-action
+          package-name: hcl-rs
