--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,3 +14,17 @@ jobs:
           release-type: rust
           bump-minor-pre-major: true
           package-name: hcl-rs
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        if: ${{ steps.release.outputs.release_created }}
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - name: Publish to crates.io
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish || true
