--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,30 +1,37 @@
 ---
+name: release-please
 on:
   push:
     branches:
       - main
 
-name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      release_created: ${{ steps.release-please.outputs.release_created }}
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - name: Run release-please
+        id: release-please
+        uses: google-github-actions/release-please-action@v3
         with:
           release-type: rust
           bump-minor-pre-major: true
           package-name: hcl-rs
 
+  publish-crate:
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: ubuntu-latest
+    steps:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
-        if: ${{ steps.release.outputs.release_created }}
         with:
           toolchain: stable
           profile: minimal
           override: true
 
       - name: Publish to crates.io
-        if: ${{ steps.release.outputs.release_created }}
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: cargo publish || true
