--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ exclude = [
 name = "hcl"
 path = "src/lib.rs"
 
+[[test]]
+name = "specsuite"
+path = "specsuite/main.rs"
+harness = false
+
 [dependencies]
 pest = "2.1.3"
 pest_derive = "2.1.0"
