--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,9 @@ features = ["derive"]
 version = "1.0.130"
 
 [dev-dependencies]
+assert-json-diff = "2.0.1"
 pretty_assertions = "1.0.0"
+textwrap = "0.15.0"
 
 [dev-dependencies.serde_json]
 features = ["preserve_order"]
