--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ harness = false
 [dependencies]
 pest = "2.1.3"
 pest_derive = "2.1.0"
+itoa = "1.0.1"
+ryu = "1.0.9"
 
 [dependencies.indexmap]
 features = ["serde"]
