--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ pest = "2.1.3"
 pest_derive = "2.1.0"
 itoa = "1.0.1"
 ryu = "1.0.9"
+unicode-xid = "0.2.2"
 
 [dependencies.indexmap]
 features = ["serde"]
