--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ exclude = [
 name = "hcl"
 path = "src/lib.rs"
 
+[[bench]]
+name = "benchmark"
+harness = false
+
 [[test]]
 name = "specsuite"
 path = "specsuite/main.rs"
@@ -39,6 +43,7 @@ features = ["derive"]
 version = "1.0.130"
 
 [dev-dependencies]
+criterion = "0.3"
 assert-json-diff = "2.0.1"
 pretty_assertions = "1.0.0"
 textwrap = "0.15.0"
