feat!: use `VecMap` for object expressions
BREAKING CHANGE: The underlying map implementation for the `Object<K, V>` type
changed from `IndexMap<K, V>` to `VecMap<K, V>`. For the most common
operations this is a drop-in replacement, but `VecMap` lacks some of the
more exotic APIs the `IndexMap` provides.

This change is necessary to add support for `Expression` as object key
type since it is not `Hash` and not `Ord`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ version = "1.7.0"
 features = ["derive"]
 version = "1.0.130"
 
+[dependencies.vecmap-rs]
+features = ["serde"]
+version = "0.1.1"
+
 [dev-dependencies]
 criterion = "0.3"
 assert-json-diff = "2.0.1"
