chore: update description in `Cargo.toml`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "hcl-rs"
 version = "0.9.0"
 authors = ["Martin Ohmann <martinohmann@gmail.com>"]
 license = "MIT"
-description = "An HCL deserializer"
+description = "HCL parser and formatter for rust with serde support"
 repository = "https://github.com/martinohmann/hcl-rs"
 documentation = "https://docs.rs/hcl-rs/"
 keywords = ["hcl", "serde", "serialization"]
