--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ path = "specsuite/main.rs"
 harness = false
 
 [features]
-default = ["nom", "pest"]
+default = ["nom"]
 nom = ["dep:nom"]
 pest = ["dep:pest", "dep:pest_derive"]
 
