split off nom-spanned feature for now
this helps to easier test and benchmark the differences between the
`pest`, `nom` and `nom-spanned` implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ path = "specsuite/main.rs"
 harness = false
 
 [features]
-default = ["nom"]
+default = ["nom-spanned"]
+nom-spanned = ["dep:nom"]
 nom = ["dep:nom"]
 pest = ["dep:pest", "dep:pest_derive"]
 
