--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,10 @@ path = "specsuite/main.rs"
 harness = false
 
 [features]
-default = ["nom-spanned"]
+default = ["nom-spanned", "perf"]
 nom-spanned = ["dep:nom"]
 nom = ["dep:nom"]
+perf = ["kstring"]
 pest = ["dep:pest", "dep:pest_derive"]
 
 [dependencies]
@@ -40,7 +41,7 @@ itoa = "1.0.5"
 nom = { version = "7", optional = true }
 ryu = "1.0.12"
 unicode-ident = "1.0.6"
-kstring = { version = "2.0.0", features = ["serde"] }
+kstring = { version = "2.0.0", features = ["serde"], optional = true }
 
 [dependencies.indexmap]
 features = ["serde"]
