feat(perf)!: optionally inline identifier strings on the stack
BREAKING CHANGE: The trait bounds on `Identifier::{new,unchecked}` and
`Variable::{new,unchecked}` were changed from `Into<String>` to
`Into<InternalString>`. This has no impact on common use cases involving
std types but may break code using custom types.

Most identifiers are relatively short and can be inlined on the stack.

The `perf` feature improves parser performance by around 5%.

I could have added this to `Identifier` directly instead of creating a
separate type. However, internal strings will be used in the new parser
implementation to make tracking whitespace and comments in HCL documents
more performant, so I'm already designing this as a reusable type not
limited to identifiers.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,15 @@ name = "specsuite"
 path = "specsuite/main.rs"
 harness = false
 
+[features]
+default = []
+perf = ["dep:kstring"]
+
 [dependencies]
 pest = "2.5.2"
 pest_derive = "2.5.2"
 itoa = "1.0.5"
+kstring = { version = "2.0.0", features = ["max_inline", "serde"], optional = true }
 ryu = "1.0.12"
 unicode-ident = "1.0.6"
 
