--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ path = "specsuite/main.rs"
 harness = false
 
 [features]
-default = ["nom-spanned", "perf"]
-nom-spanned = ["dep:nom"]
+default = ["winnow", "perf"]
+winnow = ["dep:winnow"]
 nom = ["dep:nom"]
 perf = ["dep:kstring"]
 pest = ["dep:pest", "dep:pest_derive"]
@@ -42,6 +42,7 @@ kstring = { version = "2.0.0", features = ["max_inline", "serde"], optional = tr
 nom = { version = "7", optional = true }
 ryu = "1.0.12"
 unicode-ident = "1.0.6"
+winnow = { version = "0.3.3", features = ["simd"], optional = true }
 
 [dependencies.indexmap]
 features = ["serde"]
