--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,11 @@ name = "hcl"
 path = "src/lib.rs"
 
 [[bench]]
-name = "benchmark"
+name = "serde"
+harness = false
+
+[[bench]]
+name = "parse"
 harness = false
 
 [[test]]
