--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 members = [
     "crates/benchmarks",
     "crates/hcl-rs",
-    "crates/specsuite"
+    "crates/specsuite",
+    "crates/testdata"
 ]
