feat: add `hcl-primitives` crate
This crate will house the primitives used by the different HCL
sub-languages. For now it only exposes the `Ident`, `InternalString` and
`Number` types, but it will receive additional functionality going
forward.

The crate will be used by `hcl-rs` and one or more new crates that will
house the new parser implementation and edit functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "crates/benchmarks",
+    "crates/hcl-primitives",
     "crates/hcl-rs",
     "crates/specsuite",
     "crates/testdata"
