ci: add bootstrap-sha to release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -13,6 +13,7 @@
     {"type": "build", "section": "Build System", "hidden": true},
     {"type": "ci", "section": "Continuous Integration", "hidden": true}
   ],
+  "bootstrap-sha":: "e37cfa06abcad2fe3da7ef84afb2d76c22c30b0b",
   "last-release-sha": "e37cfa06abcad2fe3da7ef84afb2d76c22c30b0b",
   "monorepo-tags": true,
   "plugins": ["cargo-workspace"],
