ci: pin release versions of unpublishable crates

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -19,8 +19,17 @@
   "plugins": ["cargo-workspace"],
   "release-type": "rust",
   "packages": {
+    "crates/benchmarks": {
+      "release-as": "0.0.0"
+    },
     "crates/hcl-rs": {
       "component": "hcl-rs"
+    },
+    "crates/specsuite": {
+      "release-as": "0.0.0"
+    },
+    "crates/testdata": {
+      "release-as": "0.0.0"
     }
   }
 }
