--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           command: manifest
 
-  publish-crate:
+  publish-crates:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created || github.event.inputs.force-publish }}
     runs-on: ubuntu-latest
@@ -44,4 +44,4 @@ jobs:
       - name: Publish to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo release publish
+        run: cargo release publish --execute --no-confirm
