--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Publish to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo release publish --execute --no-confirm
+        run: .github/scripts/cargo-release publish --execute --no-confirm
