--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
   "crates/benchmarks": "0.0.2",
+  "crates/hcl-edit": "0.0.1",
   "crates/hcl-primitives": "0.0.1",
   "crates/hcl-rs": "0.13.3",
   "crates/specsuite": "0.0.2"
