--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "crates/benchmarks",
+    "crates/hcl-edit",
     "crates/hcl-primitives",
     "crates/hcl-rs",
     "crates/specsuite",
