--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,7 @@
     {"type": "fix", "section": "Bug Fixes", "hidden": false},
     {"type": "perf", "section": "Performance Improvements", "hidden": false},
     {"type": "revert", "section": "Reverts", "hidden": false},
-    {"type": "docs", "section": "Documentation", "hidden": true},
+    {"type": "docs", "section": "Documentation", "hidden": false},
     {"type": "chore", "section": "Miscellaneous Chores", "hidden": false},
     {"type": "refactor", "section": "Code Refactoring", "hidden": true},
     {"type": "test", "section": "Tests", "hidden": true},
