chore: link to the HCL syntax spec in operator docs

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -18,8 +18,7 @@
   "release-type": "rust",
   "packages": {
     "crates/hcl-primitives": {
-      "component": "hcl-primitives",
-      "release-as": "0.0.2"
+      "component": "hcl-primitives"
     },
     "crates/hcl-rs": {
       "component": "hcl-rs"
