--- a/crates/hcl-edit/Cargo.toml
+++ b/crates/hcl-edit/Cargo.toml
@@ -27,10 +27,9 @@ all-features = true
 [features]
 default = []
 perf = ["hcl-primitives/perf"]
-serde = ["hcl-primitives/serde"]
 
 [dependencies]
-hcl-primitives = { version = "0.0.2", path = "../hcl-primitives", features = ["serde"] }
+hcl-primitives = { version = "0.0.2", path = "../hcl-primitives" }
 winnow = "0.3.5"
 
 [dev-dependencies]
