--- a/crates/hcl-edit/Cargo.toml
+++ b/crates/hcl-edit/Cargo.toml
@@ -30,6 +30,7 @@ perf = ["hcl-primitives/perf"]
 
 [dependencies]
 hcl-primitives = { version = "0.0.2", path = "../hcl-primitives" }
+vecmap-rs = "0.1.10"
 winnow = "0.3.5"
 
 [dev-dependencies]
