docs: enable `doc_auto_cfg` feature on `docs.rs`

--- a/crates/hcl-rs/Cargo.toml
+++ b/crates/hcl-rs/Cargo.toml
@@ -21,6 +21,10 @@ include = [
   "tests/**/*"
 ]
 
+[package.metadata.docs.rs]
+rustdoc-args = ["--cfg", "docsrs"]
+all-features = true
+
 [lib]
 name = "hcl"
 path = "src/lib.rs"
