--- a/crates/hcl-edit/Cargo.toml
+++ b/crates/hcl-edit/Cargo.toml
@@ -38,3 +38,7 @@ winnow = "0.4.4"
 indoc = "2.0"
 pretty_assertions = "1.3.0"
 testdata = { path = "../testdata" }
+
+[[example]]
+name = "interpolation-unwrapping"
+test = true
