--- a/crates/hcl-edit/Cargo.toml
+++ b/crates/hcl-edit/Cargo.toml
@@ -32,7 +32,7 @@ perf = ["hcl-primitives/perf"]
 [dependencies]
 hcl-primitives = { version = "0.1.0", path = "../hcl-primitives" }
 vecmap-rs = "0.1.10"
-winnow = "0.4.4"
+winnow = "= 0.4.4"
 
 [dev-dependencies]
 indoc = "2.0"
