--- a/crates/hcl-rs/Cargo.toml
+++ b/crates/hcl-rs/Cargo.toml
@@ -45,3 +45,7 @@ vecmap-rs = { version = "0.1.11", features = ["serde"] }
 indoc = "2.0"
 pretty_assertions = "1.4.0"
 serde_json = { version = "1.0.105", features = ["preserve_order"] }
+
+[[example]]
+name = "in-place-expr-evaluation"
+test = true
