--- a/crates/hcl-primitives/Cargo.toml
+++ b/crates/hcl-primitives/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 description = "Primitives used by the HCL sub-languages"
 repository = "https://github.com/martinohmann/hcl-rs"
 documentation = "https://docs.rs/hcl-primitives/"
-keywords = ["hcl"]
+keywords = ["hcl", "primitives"]
 categories = ["encoding"]
 readme = "README.md"
 edition = "2021"
