feat!: add `Capsule` type
WIP

--- a/crates/hcl-primitives/Cargo.toml
+++ b/crates/hcl-primitives/Cargo.toml
@@ -37,3 +37,5 @@ kstring = { version = "2.0.2", features = ["max_inline"], optional = true }
 serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive"], optional = true }
 unicode-ident = "1.0.14"
 ryu = "1.0.18"
+dyn_std = "0.3.3"
+dyn-clone = "1.0.17"
