ci(renovate): ignore testdata

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,5 +18,8 @@
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
   "rebaseWhen": "conflicted",
   "assigneesFromCodeOwners": false,
-  "reviewersFromCodeOwners": true
+  "reviewersFromCodeOwners": true,
+  "ignorePaths": [
+    "**/testdata/**",
+  ]
 }
