feat: add simple `hcl2json` CLI
This both acts as demo and is acutally useful. Pretty basic still, but
much faster than https://github.com/Bonial-International-GmbH/hcl2json which
I wrote for work some years back for parsing thousands of `*.tf` files.

I had this one laying around for far too long now and need to get it out.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ members = [
     "crates/hcl-edit",
     "crates/hcl-primitives",
     "crates/hcl-rs",
+    "crates/hcl2json",
     "crates/specsuite",
     "crates/testdata"
 ]
 resolver = "2"
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = "s"
