chore: move dependency versions to workspace
This ensures they are aligned.

--- a/crates/benchmarks/Cargo.toml
+++ b/crates/benchmarks/Cargo.toml
@@ -16,7 +16,7 @@ name = "serde"
 harness = false
 
 [dev-dependencies]
-criterion = "0.6"
+criterion.workspace = true
 hcl-edit = { path = "../hcl-edit" }
 hcl-rs = { path = "../hcl-rs" }
 testdata = { path = "../testdata" }
