--- a/crates/hcl-primitives/Cargo.toml
+++ b/crates/hcl-primitives/Cargo.toml
@@ -32,8 +32,8 @@ perf = ["std", "dep:kstring"]
 serde = ["dep:serde", "kstring?/serde"]
 
 [dependencies]
-itoa = "1.0.14"
-kstring = { version = "2.0.2", features = ["max_inline"], optional = true }
-serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive"], optional = true }
-unicode-ident = "1.0.14"
-ryu = "1.0.18"
+itoa.workspace = true
+kstring = { workspace = true, features = ["max_inline"], optional = true }
+ryu.workspace = true
+serde = { workspace = true, features = ["alloc", "derive"], optional = true }
+unicode-ident.workspace = true
