--- a/crates/specsuite/Cargo.toml
+++ b/crates/specsuite/Cargo.toml
@@ -13,7 +13,7 @@ path = "main.rs"
 harness = false
 
 [dev-dependencies]
-assert-json-diff = "2.0.2"
+assert-json-diff.workspace = true
 hcl-rs = { path = "../hcl-rs" }
-serde = { version = "1.0.217", features = ["derive"] }
-textwrap = "0.16.1"
+serde = { workspace = true, features = ["derive"] }
+textwrap.workspace = true
