--- a/crates/hcl2json/Cargo.toml
+++ b/crates/hcl2json/Cargo.toml
@@ -28,7 +28,8 @@ all-features = true
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.40", features = ["derive"] }
-glob = "0.3.2"
+globset = "0.4.16"
 hcl-rs = { version = "0.18.6", path = "../hcl-rs", features = ["perf"] }
 rayon = "1.10.0"
 serde_json = "1.0.140"
+walkdir = "2.5.0"
