--- a/crates/hcl2json/Cargo.toml
+++ b/crates/hcl2json/Cargo.toml
@@ -31,5 +31,9 @@ clap = { version = "4.5.40", features = ["derive"] }
 globset = "0.4.16"
 hcl-rs = { version = "0.18.6", path = "../hcl-rs", features = ["perf"] }
 rayon = "1.10.0"
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", features = ["preserve_order"] }
 walkdir = "2.5.0"
+
+[dev-dependencies]
+assert_cmd = { version = "2.0.17", features = ["color"] }
+predicates = "3.1.3"
